fix the color of the btn text being white and not visible

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -117,6 +117,10 @@ body{
     margin-bottom: 10px;
 }
 
+#btn-text{
+    color: var(--miscellaneous-color);
+}
+
 
 /* layout for tablets */
 @media (max-width:912px){
